--- a/4_semestre/portifolio/portifolio.html
+++ b/4_semestre/portifolio/portifolio.html
@@ -126,6 +126,50 @@
         a {
             text-decoration: none;
         }
+
+        .h2_habilidade {
+            font-size: 30px;
+            font-family: Roboto;
+            text-align: center;
+            padding-top: 40px;
+        }
+
+
+        ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+        }
+
+        li {
+            background-color: #1e2a3a86;
+            padding: 15px 20px;
+            border-radius: 8px;
+            font-size: 20px;
+            color: #54B689;
+            font-weight: bold;
+            font-family: Quicksand;
+        }
+
+        .h2_contato {
+            font-size: 27px;
+            font-family: Roboto;
+            text-align: center;
+            padding-top: 60px;
+            padding-bottom: 20px;
+        }
+
+        .link_github {
+            text-decoration: none;
+            font-family: Quicksand;
+            font-size: 23px;
+            display: flex;
+            margin-left: 30px;
+            color: #54B689;
+        }
     </style>
 </head>
 
@@ -160,29 +204,28 @@
                     </a>
                 </div>
                 <div class="div_projeto_2">
-                    <!-- Conteúdo do projeto 2 -->
-                </div>
-                <div class="div_projeto_2">
-                    <!-- Conteúdo do projeto 2 -->
+                    <!-- Ainda não tenho mais projetos, mas terei outros em breve -->
+                    <p>em breve...</p>
                 </div>
 
             </div>
         </section>
 
         <section>
-            <h2>Habilidades</h2>
-            <!-- <ul>
+            <h2 class="h2_habilidade">Habilidades</h2>
+            <ul>
+                <li>Python</li>
                 <li>HTML</li>
                 <li>CSS</li>
-                <li>Python</li>
-                <li>JavaScript</li>
                 <li>SQL</li>
-            </ul> -->
+            </ul>
         </section>
 
 
         <footer>
-            <h2>Entre em contato comigo</h2>
+            <h2 class="h2_contato">Entre em contato comigo</h2>
+            <a class="link_github" href="https://github.com/Vict0Rocha" target="_blank"><b> GitHub</b></a>
+            <p>victor.rocha@estudante.ifmt.edu.br</p>
 
         </footer>
     </div>
